syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lcaohoanq.grpcapi.proto";
option java_outer_classname = "UserServiceProto";

package user;

service UserService {
  rpc GetUserById(UserRequest) returns (UserResponse);
  rpc GetAllUsers(Empty) returns (UserListResponse);
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc StreamUsers(Empty) returns (stream UserResponse);
}

message Empty {}

message UserRequest {
  int64 id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string bio = 3;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string bio = 4;
}

message UserListResponse {
  repeated UserResponse users = 1;
}
